updated background images

--- a/portfolio/assets/css/main.css
+++ b/portfolio/assets/css/main.css
@@ -543,7 +543,7 @@ input, select, textarea {
 		@media screen and (max-width: 736px) {
 
 			body, input, textarea, select {
-				font-size: 12pt;
+				font-size: 14pt;
 				line-height: 1.5em;
 			}
 
@@ -1767,6 +1767,7 @@ input, select, textarea {
 				-webkit-transform: translateX(-14em);
 				-ms-transform: translateX(-14em);
 				transform: translateX(-14em);
+				
 			}
 
 			.gallery.inactive article.from-right {
@@ -2229,7 +2230,7 @@ input, select, textarea {
 /* Intro */
 
 	#intro {
-		background: url("images/overlay.png"), url("../../images/intro.jpg");
+		background: url("images/overlay.png"), url("../../images/beach-boardwalk-img.png");
 		background-size: 256px 256px, cover;
 		background-attachment: fixed, fixed;
 		background-position: top left, bottom center;
@@ -2239,7 +2240,7 @@ input, select, textarea {
 /* One */
 
 	#one {
-		background: url("images/overlay.png"), url("../../images/one.jpg");
+		background: url("images/overlay.png"), url("../../images/abandoned-sunset.png");
 		background-size: 256px 256px, cover;
 		background-attachment: fixed, fixed;
 		background-position: top left, center center;
@@ -2248,7 +2249,7 @@ input, select, textarea {
 /* Two */
 
 	#two {
-		background: url("images/overlay.png"), url("../../images/two.jpg");
+		background: url("images/overlay.png"), url("../../images/sky-coaster.png");
 		background-size: 256px 256px, cover;
 		background-attachment: fixed, fixed;
 		background-position: top left, center center;
